trying to train FDM with husky

--- a/RaisimGymTorch/env/envs/test/test.ipynb
+++ b/RaisimGymTorch/env/envs/test/test.ipynb
@@ -32,6 +32,80 @@
     "                                         84, 12)\n",
     "command_tracking_policy.load_state_dict(torch.load('/home/nguyen/Projects/ChargingRobot/raisim/raisimLib/complex-env-navigation/data/command_tracking_flat/final/full_16200.pt', map_location='cpu')['actor_architecture_state_dict'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Linear(in_features=84, out_features=128, bias=True)\n",
+       "  (1): LeakyReLU(negative_slope=0.01)\n",
+       "  (2): Linear(in_features=128, out_features=32, bias=True)\n",
+       "  (3): LeakyReLU(negative_slope=0.01)\n",
+       "  (4): Linear(in_features=32, out_features=4, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "def init_weights(m):\n",
+    "    if isinstance(m, nn.Linear):\n",
+    "        torch.nn.init.xavier_uniform_(m.weight)\n",
+    "        m.bias.data.fill_(0.01)\n",
+    "\n",
+    "command_tracking_policy = nn.Sequential(nn.Linear(84,128,), nn.LeakyReLU(), nn.Linear(128,32), nn.LeakyReLU(), nn.Linear(32,4))\n",
+    "command_tracking_policy.apply(init_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(command_tracking_policy.state_dict(),'/home/nguyen/Projects/ChargingRobot/raisim/raisimLib/complex-env-navigation/data/command_tracking_flat/testing_2_layers/full_0.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "test = torch.rand((2,4))*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.8852262, 48.69544  , 88.726875 , 22.116804 ],\n",
+       "       [81.945625 , 61.310993 , 81.81577  , 45.464603 ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.detach().numpy()"
+   ]
   }
  ],
  "metadata": {
