trying husky ran but not terminate when bumper collise

--- a/RaisimGymTorch/env/envs/test/test.ipynb
+++ b/RaisimGymTorch/env/envs/test/test.ipynb
@@ -2,6 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'3C8ABA187F32E5887F626A2C7B7654502B3A9C103D1A2EB8B5763220D8061F40F6606D0815B8DBB84702AB5021249A9043F6836CA194DF88857897D4E156C780' == '3C8ABA187F32E5887F626A2C7B7654502B3A9C103D1A2EB8B5763220D80600A0CDD80F30CBAEDBB84702AB5021249A9043F6836CA194DF88857897D4E156C780'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60 1\n",
+      "61 F\n",
+      "62 4\n",
+      "64 F\n",
+      "65 6\n",
+      "66 6\n",
+      "67 0\n",
+      "68 6\n",
+      "69 D\n",
+      "70 0\n",
+      "71 8\n",
+      "72 1\n",
+      "73 5\n",
+      "74 B\n",
+      "75 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,c in enumerate('3C8ABA187F32E5887F626A2C7B7654502B3A9C103D1A2EB8B5763220D8061F40F6606D0815B8DBB84702AB5021249A9043F6836CA194DF88857897D4E156C780'):\n",
+    "    if c != '3C8ABA187F32E5887F626A2C7B7654502B3A9C103D1A2EB8B5763220D80600A0CDD80F30CBAEDBB84702AB5021249A9043F6836CA194DF88857897D4E156C780'[i]:\n",
+    "        print(i, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
