--- a/RaisimGymTorch/env/envs/test/test.ipynb
+++ b/RaisimGymTorch/env/envs/test/test.ipynb
@@ -2,71 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'3C8ABA187F32E5887F626A2C7B7654502B3A9C103D1A2EB8B5763220D8061F40F6606D0815B8DBB84702AB5021249A9043F6836CA194DF88857897D4E156C780' == '3C8ABA187F32E5887F626A2C7B7654502B3A9C103D1A2EB8B5763220D80600A0CDD80F30CBAEDBB84702AB5021249A9043F6836CA194DF88857897D4E156C780'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "60 1\n",
-      "61 F\n",
-      "62 4\n",
-      "64 F\n",
-      "65 6\n",
-      "66 6\n",
-      "67 0\n",
-      "68 6\n",
-      "69 D\n",
-      "70 0\n",
-      "71 8\n",
-      "72 1\n",
-      "73 5\n",
-      "74 B\n",
-      "75 8\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i,c in enumerate('3C8ABA187F32E5887F626A2C7B7654502B3A9C103D1A2EB8B5763220D8061F40F6606D0815B8DBB84702AB5021249A9043F6836CA194DF88857897D4E156C780'):\n",
-    "    if c != '3C8ABA187F32E5887F626A2C7B7654502B3A9C103D1A2EB8B5763220D80600A0CDD80F30CBAEDBB84702AB5021249A9043F6836CA194DF88857897D4E156C780'[i]:\n",
-    "        print(i, c)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import RaisimGymTorch.algo.ppo.module as ppo_module"
+    "from RaisimGymTorch.env.envs.train.model import Forward_Dynamics_Model\n",
+    "from ruamel.yaml import YAML, dump, RoundTripDumper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = YAML().load(open(\"/home/nguyen/Projects/ChargingRobot/raisim/raisimLib/complex-env-navigation/RaisimGymTorch/env/envs/test/cfg.yaml\", 'r'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -75,90 +31,114 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "command_tracking_policy = ppo_module.MLP((128,128), nn.LeakyReLU,\n",
-    "                                         84, 12)\n",
-    "command_tracking_policy.load_state_dict(torch.load('/home/nguyen/Projects/ChargingRobot/raisim/raisimLib/complex-env-navigation/data/command_tracking_flat/final/full_16200.pt', map_location='cpu')['actor_architecture_state_dict'])"
+    "loaded_environment_model = Forward_Dynamics_Model(state_encoding_config=cfg[\"environment_model\"][\"architecture\"][\"state_encoder\"],\n",
+    "                                                  command_encoding_config=cfg[\"environment_model\"][\"architecture\"][\"command_encoder\"],\n",
+    "                                                  recurrence_config=cfg[\"environment_model\"][\"architecture\"][\"recurrence\"],\n",
+    "                                                  prediction_config=cfg[\"environment_model\"][\"architecture\"][\"traj_predictor\"],\n",
+    "                                                  device='cpu')\n",
+    "loaded_environment_model.load_state_dict(torch.load(\"/home/nguyen/Projects/ChargingRobot/raisim/raisimLib/complex-env-navigation/data/FDM_train/2024-11-26-16-05-30/full_400.pt\", map_location='cpu')['model_architecture_state_dict'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Sequential(\n",
-       "  (0): Linear(in_features=84, out_features=128, bias=True)\n",
-       "  (1): LeakyReLU(negative_slope=0.01)\n",
-       "  (2): Linear(in_features=128, out_features=32, bias=True)\n",
-       "  (3): LeakyReLU(negative_slope=0.01)\n",
-       "  (4): Linear(in_features=32, out_features=4, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "def init_weights(m):\n",
-    "    if isinstance(m, nn.Linear):\n",
-    "        torch.nn.init.xavier_uniform_(m.weight)\n",
-    "        m.bias.data.fill_(0.01)\n",
-    "\n",
-    "command_tracking_policy = nn.Sequential(nn.Linear(84,128,), nn.LeakyReLU(), nn.Linear(128,32), nn.LeakyReLU(), nn.Linear(32,4))\n",
-    "command_tracking_policy.apply(init_weights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(command_tracking_policy.state_dict(),'/home/nguyen/Projects/ChargingRobot/raisim/raisimLib/complex-env-navigation/data/command_tracking_flat/testing_2_layers/full_0.pt')"
+    "x = torch.rand()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "test = torch.rand((2,4))*100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4.8852262, 48.69544  , 88.726875 , 22.116804 ],\n",
-       "       [81.945625 , 61.310993 , 81.81577  , 45.464603 ]], dtype=float32)"
+       "Forward_Dynamics_Model(\n",
+       "  (state_encoder): MLP(\n",
+       "    (architecture): Sequential(\n",
+       "      (0): Linear(in_features=450, out_features=256, bias=True)\n",
+       "      (1): LeakyReLU(negative_slope=0.01)\n",
+       "      (2): Linear(in_features=256, out_features=256, bias=True)\n",
+       "      (3): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (4): LeakyReLU(negative_slope=0.01)\n",
+       "      (5): Dropout(p=0.2, inplace=False)\n",
+       "      (6): Linear(in_features=256, out_features=128, bias=True)\n",
+       "      (7): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (8): LeakyReLU(negative_slope=0.01)\n",
+       "      (9): Dropout(p=0.2, inplace=False)\n",
+       "      (10): Linear(in_features=128, out_features=128, bias=True)\n",
+       "      (11): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (12): LeakyReLU(negative_slope=0.01)\n",
+       "      (13): Dropout(p=0.2, inplace=False)\n",
+       "      (14): Linear(in_features=128, out_features=100, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (command_encoder): MLP(\n",
+       "    (architecture): Sequential(\n",
+       "      (0): Linear(in_features=3, out_features=32, bias=True)\n",
+       "      (1): LeakyReLU(negative_slope=0.01)\n",
+       "      (2): Linear(in_features=32, out_features=64, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (recurrence): LSTM(64, 100, num_layers=2, dropout=0.2)\n",
+       "  (Pcol_prediction): MLP(\n",
+       "    (architecture): Sequential(\n",
+       "      (0): Linear(in_features=100, out_features=64, bias=True)\n",
+       "      (1): LeakyReLU(negative_slope=0.01)\n",
+       "      (2): Linear(in_features=64, out_features=32, bias=True)\n",
+       "      (3): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (4): LeakyReLU(negative_slope=0.01)\n",
+       "      (5): Dropout(p=0.2, inplace=False)\n",
+       "      (6): Linear(in_features=32, out_features=16, bias=True)\n",
+       "      (7): BatchNorm1d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (8): LeakyReLU(negative_slope=0.01)\n",
+       "      (9): Dropout(p=0.2, inplace=False)\n",
+       "      (10): Linear(in_features=16, out_features=1, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (coordinate_prediction): MLP(\n",
+       "    (architecture): Sequential(\n",
+       "      (0): Linear(in_features=100, out_features=64, bias=True)\n",
+       "      (1): LeakyReLU(negative_slope=0.01)\n",
+       "      (2): Linear(in_features=64, out_features=32, bias=True)\n",
+       "      (3): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (4): LeakyReLU(negative_slope=0.01)\n",
+       "      (5): Dropout(p=0.2, inplace=False)\n",
+       "      (6): Linear(in_features=32, out_features=16, bias=True)\n",
+       "      (7): BatchNorm1d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (8): LeakyReLU(negative_slope=0.01)\n",
+       "      (9): Dropout(p=0.2, inplace=False)\n",
+       "      (10): Linear(in_features=16, out_features=2, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (sigmoid): Sigmoid()\n",
+       ")"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test.detach().numpy()"
+    "loaded_environment_model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
